--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="about.css">
-    <title>About UHWM</title>
+    <title>Under His Wings Ministries</title>
 </head>
 <body>
     <header>
