--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="contact.css">
-    <title>About UHWM</title>
+    <title>Under His Wings Ministries -Contacts</title>
 </head>
 <body>
     <header>
