--- a/map.html
+++ b/map.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/473bffc45b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Under His Wings Ministries -directions</title>
 </head>
 <body>
     <span class="b"><a href="index.html" title="home">&#11164;</a></span>
